docs/gko/4.4/SUMMARY.md
# Table of contents

## OVERVIEW

* [Introduction](README.md)
* [Custom resource definitions](../4.6/overview/custom-resource-definitions/README.md)
  * [ManagementContext](../4.6/overview/custom-resource-definitions/managementcontext.md)
  * [ApiV4Definition](../4.6/overview/custom-resource-definitions/apiv4definition.md)
  * [ApiDefinition](../4.6/overview/custom-resource-definitions/apidefinition.md)
  * [ApiResource](../4.6/overview/custom-resource-definitions/apiresource.md)
  * [Application](../4.6/overview/custom-resource-definitions/application.md)
  * [Subscription](../4.6/overview/custom-resource-definitions/subscription.md)
* [Example architecture](../4.6/overview/example-architecture.md)
* [Compatibility and limitations](../4.6/overview/compatibility-and-limitations.md)

## GETTING STARTED

* [Quickstart guide](../4.6/getting-started/quickstart-guide.md)
* [Installation](../4.6/getting-started/installation/README.md)
  * [Install with Helm](../4.6/getting-started/installation/install-with-helm.md)
  * [Cluster vs namespaced install](../4.6/getting-started/installation/cluster-vs-namespaced-install.md)
* [API storage and control options](../4.6/getting-started/api-storage-and-control-options/README.md)
  * [Use a central APIM repository](../4.6/getting-started/api-storage-and-control-options/use-a-central-apim-repository.md)
  * [Configure the Gateway to load APIs from local ConfigMaps](../4.6/getting-started/api-storage-and-control-options/configure-the-gateway-to-load-apis-from-local-configmaps.md)
  * [Store APIs in local configMaps](../4.6/getting-started/api-storage-and-control-options/store-apis-in-local-configmaps.md)

## GUIDES

* [Manage JWT subscriptions with GKO](../4.6/guides/manage-jwt-subscriptions-with-gko.md)
* [Define an APIM service account for GKO](../4.6/guides/define-an-apim-service-account-for-gko.md)
* [Deploy APIs to a gateway](../4.6/guides/deploy-apis-to-a-gateway.md)
* [Publish APIs to the portal](../4.6/guides/publish-apis-to-the-portal.md)
* [Manage API documentation pages](../4.6/guides/manage-api-documentation-pages.md)
* [Manage API and Application Groups and Members](../4.6/guides/manage-api-groups-and-members.md)
* [Export an API as a Kubernetes manifest](../4.6/guides/export-an-api-as-a-kubernetes-manifest.md)
* [Multi-environment architecture](../4.6/guides/multi-environment-architecture.md)
* [Create your own Helm charts](../4.6/guides/create-your-own-helm-charts.md)
* [Gravitee Ingress Controller](../4.6/guides/gravitee-ingress-controller.md)
* [DB-less mode](../4.6/guides/db-less-mode.md)
* [Templating](../4.6/guides/templating.md)

## REFERENCE

* [API reference](../4.6/reference/api-reference.md)

## RELEASES & CHANGELOG

* [Release notes](../4.6/releases-and-changelog/release-notes/README.md)
  * [GKO 4.6](../4.6/releases-and-changelog/release-notes/gko-4.6.md)
  * [GKO 4.5](https://documentation.gravitee.io/gravitee-kubernetes-operator-gko/4.5/releases-and-changelog/release-notes/gko-4.5)
  * [GKO 4.4](https://documentation.gravitee.io/gravitee-kubernetes-operator-gko/gko-4.4/releases-and-changelog/release-notes/gko-4.4)
  * [GKO 4.3](https://documentation.gravitee.io/gravitee-kubernetes-operator-gko/4.3/releases-and-changelog/release-notes/gko-4.3)
* [Changelog](../4.6/releases-and-changelog/changelog/README.md)
  * [GKO 4.5.x](../4.6/releases-and-changelog/changelog/gko-4.5.x.md)
  * [GKO 4.4.x](https://documentation.gravitee.io/gravitee-kubernetes-operator-gko/gko-4.4/releases-and-changelog/changelog/gko-4.4.x)
  * [GKO 4.3.x](https://documentation.gravitee.io/gravitee-kubernetes-operator-gko/4.3/releases-and-changelog/changelog/gko-4.3.x)

## COMMUNITY & SUPPORT

* [Enterprise Support](../4.6/community-and-support/enterprise-support.md)
* [Community](../4.6/community-and-support/community/README.md)
  * [Support](https://community.gravitee.io/c/support/11)
  * [Announcements & Events](https://community.gravitee.io/c/announcements/5)
