docs/gko/4.8/SUMMARY.md
# Table of contents

## OVERVIEW

* [Introduction](README.md)
* [Custom Resource Definitions](overview/custom-resource-definitions/README.md)
  * [ManagementContext](overview/custom-resource-definitions/managementcontext.md)
  * [ApiV4Definition](overview/custom-resource-definitions/apiv4definition.md)
  * [ApiDefinition](overview/custom-resource-definitions/apidefinition.md)
  * [ApiResource](overview/custom-resource-definitions/apiresource.md)
  * [Application](overview/custom-resource-definitions/application.md)
  * [Subscription](overview/custom-resource-definitions/subscription.md)
  * [Group](overview/custom-resource-definitions/group.md)
  * [SharedPolicyGroup](overview/custom-resource-definitions/sharedpolicygroup.md)
  * [Notification](overview/custom-resource-definitions/notification.md)
  * [GatewayClassParameters](overview/custom-resource-definitions/gatewayclassparameters.md)
  * [KafkaRoute](overview/custom-resource-definitions/kafkaroute.md)
* [Example Architecture](overview/example-architecture.md)
* [Compatibility and Limitations](overview/compatibility-and-limitations.md)

## GETTING STARTED

* [Quickstart Guide](getting-started/quickstart-guide.md)
* [Installation](getting-started/installation/README.md)
  * [Install with Helm](getting-started/installation/install-with-helm.md)
  * [Cluster vs Namespaced Install](getting-started/installation/cluster-vs-namespaced-install.md)
  * [RBAC customization](getting-started/installation/rbac-customization.md)
* [API Storage and Control Options](getting-started/api-storage-and-control-options/README.md)
  * [Use a central APIM repository](getting-started/api-storage-and-control-options/use-a-central-apim-repository.md)
  * [Configure the Gateway to load APIs from local ConfigMaps](getting-started/api-storage-and-control-options/configure-the-gateway-to-load-apis-from-local-configmaps.md)
  * [Store APIs in local ConfigMaps](getting-started/api-storage-and-control-options/store-apis-in-local-configmaps.md)

## GUIDES

* [Manage JWT subscriptions with GKO](guides/manage-jwt-subscriptions-with-gko.md)
* [Define an APIM service account for GKO](guides/define-an-apim-service-account-for-gko.md)
* [Deploy APIs to a Gateway](guides/deploy-apis-to-a-gateway.md)
* [Publish APIs to the Developer Portal](guides/publish-apis-to-the-portal.md)
* [Manage API documentation pages](guides/manage-api-documentation-pages.md)
* [Manage API and application groups and members](guides/manage-api-groups-and-members.md)
* [Export an API as a Kubernetes manifest](guides/export-an-api-as-a-kubernetes-manifest.md)
* [Multi-environment deployment architecture](guides/multi-environment-architecture.md)
* [Create your own Helm Charts](guides/create-your-own-helm-charts.md)
* [Gravitee Ingress Controller](guides/gravitee-ingress-controller.md)
* [DB-less mode](guides/db-less-mode.md)
* [Templating](guides/templating.md)

## REFERENCE

* [API Reference](reference/api-reference.md)

## RELEASES & CHANGELOG

* [Release Notes](releases-and-changelog/release-notes/README.md)

***
<!-- start_release_notes_summary -->
* [GKO 4.8](releases-and-changelog/release-notes/gko-4.8.md)
* [GKO 4.7](https://documentation.gravitee.io/gravitee-kubernetes-operator-gko/4.7/releases-and-changelog/release-notes/gko-4.7)
* [GKO 4.6](https://documentation.gravitee.io/gravitee-kubernetes-operator-gko/4.6/releases-and-changelog/release-notes/gko-4.6)
* [GKO 4.5](https://documentation.gravitee.io/gravitee-kubernetes-operator-gko/4.5/releases-and-changelog/release-notes/gko-4.5)
* [GKO 4.4](https://documentation.gravitee.io/gravitee-kubernetes-operator-gko/4.4/releases-and-changelog/release-notes/gko-4.4)
* [GKO 4.3](https://documentation.gravitee.io/gravitee-kubernetes-operator-gko/4.3/releases-and-changelog/release-notes/gko-4.3)
<!-- end_release_notes_summary -->
* [Changelog](releases-and-changelog/changelog/README.md)
<!-- start_changelogs_summary -->
  * [GKO 4.8.x](releases-and-changelog/changelog/gko-4.8.x.md)
  * [GKO 4.7.x](https://documentation.gravitee.io/gravitee-kubernetes-operator-gko/4.7/releases-and-changelog/changelog/gko-4.7.x)
  * [GKO 4.6.x](https://documentation.gravitee.io/gravitee-kubernetes-operator-gko/4.6/releases-and-changelog/changelog/gko-4.6.x)
  * [GKO 4.5.x](https://documentation.gravitee.io/gravitee-kubernetes-operator-gko/4.5/releases-and-changelog/changelog/gko-4.5.x)
  * [GKO 4.4.x](https://documentation.gravitee.io/gravitee-kubernetes-operator-gko/gko-4.4/releases-and-changelog/changelog/gko-4.4.x)
  * [GKO 4.3.x](https://documentation.gravitee.io/gravitee-kubernetes-operator-gko/4.3/releases-and-changelog/changelog/gko-4.3.x)
<!-- end_changelogs_summary -->

## COMMUNITY & SUPPORT

* [Enterprise Support](community-and-support/enterprise-support.md)
* [Community](community-and-support/community/README.md)
  * [Support](https://community.gravitee.io/c/support/11)
  * [Announcements & Events](https://community.gravitee.io/c/announcements/5)
